# make-anki

./: .gitignore  README.md  contentcs336_lect1.txt  main.py  make-anki.ipynb  pyproject.toml
cards/: anki_cards.csv  anki_cards1.csv
make_anki/: __init__.py  core.py
make_anki/prompts/: creation.txt
