[project]
name = "make-anki"
version = "0.1.0"
description = "anki cards using llms"
authors = [
    {name = "dhruvnigam93", email = "dhruv.nigam93@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "openai>=1.0.0",
    "click>=8.0.0",
    "genanki>=0.13.0",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "jupyterlab (>=4.4.6,<5.0.0)",
    "notebook (>=7.4.5,<8.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
    "dspy (>=3.0.2,<4.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "pypdf2 (>=3.0.1,<4.0.0)"
]

[tool.poetry]
packages = [
    {include = "make_anki"}
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"